add cart & fix card
