# models/Cart.js
@@ -1,19 +1,23 @@
 const mongoose = require("mongoose");
 
-const cardSchema = new mongoose.Schema(
+const cartSchema = new mongoose.Schema(
   {
-    userId: {
-      type: mongoose.Schema.Types.ObjectId,
-      ref: "User",
-      required: true,
-    },
-    cardType: { type: String, enum: ["visa", "master", "momo", "zalo"], required: true },
-    cardNumber: { type: String, required: true },
-    expiryDate: { type: String, required: true }, // MM/YY
-    cardHolder: { type: String, required: true },
-    isDefault: { type: Boolean, default: false },
+    user: { type: mongoose.Schema.Types.ObjectId, ref: "User", required: true },
+    products: [
+      {
+        product: {
+          type: mongoose.Schema.Types.ObjectId,
+          ref: "Product",
+          required: true,
+        },
+        quantity: { type: Number, default: 1, min: 1 },
+      },
+    ],
+    voucherCode: { type: String, default: null },
+    shippingFee: { type: Number, default: 0 },
+    total: { type: Number, default: 0 },
   },
   { timestamps: true }
 );
 
-module.exports = mongoose.model("Card", cardSchema);
+module.exports = mongoose.model("Cart", cartSchema);
